# git-intelligence-message

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docs.yml
Formula/: git-intelligence-message.rb
docs/: mkdocs.yml  requirements.txt
docs/content/: ai.md  changelog.md  cli.md  contribute.md  index.md  installation.md  prompt.md  update.md  user_config.md
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs
src/cli/: ai_configer.rs  command.rs  custom_param.rs  entry.rs  handler.rs  http.rs  mod.rs  prompt.rs  prompts.rs  verbose.rs  windows_test.rs
src/cli/update/: mod.rs  models.rs  reminder.rs
