[package]
name = "git-intelligence-message"
version = "1.2.0"
edition = "2021"
description = "An advanced Git commit message generation utility with AI assistance"
authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
license = "MIT"
repository = "https://github.com/davelet/git-intelligence-message"
readme = "README.md"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
gim-config = "0.1.0"
clap = { version = "4.4", features = ["derive"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dirs = "5.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"]}

semver = "1.0"

[[bin]]
name = "gim"
path = "src/main.rs"
