[package]
name = "git-intelligence-message"
version = "1.7.0"
edition = "2024"
description = "An advanced Git commit message generation utility with AI assistance. Supports Windows, macOS, and Linux."
authors = ["Sheldon.Wei<sheldon.sh.hb@gmail.com>"]
license = "MIT"
repository = "https://github.com/davelet/git-intelligence-message"
readme = "README.md"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
gim-config = "1.0.0"
# gim-config = { git = "https://github.com/davelet/gim-config", branch = "develop" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml = { version = "0.8", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
lazy_static = "1.4"
indoc = "2.0.6"

[[bin]]
name = "gim"
path = "src/main.rs"
